--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,12 @@ padding: 10px 0;
 
 main h1{
 padding-left: 20px;
-padding-top: 10px;
+padding-top: 20px;
+}
+
+main p{
+    padding: 0 20px;
+    font-size: 15px;
 }
 
 /* SKIP TO MAIN CONTENT */
@@ -118,11 +123,149 @@ height: auto;
     padding: 0 20px;
   }
 
+  .min-container-flex{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+
+  /* ABOUT */
+
+  @keyframes about-intro-img {
+    from{
+      width: 0px;
+      height: 0px;
+    }
+    to {
+      width: 300px;
+      height: 100%;
+    }
+  }
+  .about img{
+      padding: 10px;
+      animation-name: about-intro-img;
+      animation-duration: 5s;
+  }
+
+  /* ART */
+
+  .artwork{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      place-items: center;
+      justify-content: center;
+  }
+  
+  .artwork img{
+    padding: 10px;
+    margin: 10px;
+    border: #555555 solid 5px;
+    border-radius: 50px;
+  }
+  
+/* AWWDELISH */
+
+  .instagram_feed{
+      overflow: hidden;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+  }
+  
+  .instagram_feed .instagram_new {
+    width: 100%;
+    float: left;
+    padding: 0 1px 1px 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+
+  .instagram_feed img.insta-image {
+    position: absolute;
+    left: 0;
+    top: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -ms-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+  }
+  
+  .instagram_feed .insta-link {
+    position: relative;
+    display: block;
+    /* background: #232323; */
+    padding-top: 100%;
+  }
+  
+  .instagram_feed .insta-link:hover .insta-image {
+    opacity: 0.2;
+  }
+
   footer{
     background-color: #212529;
     color: #FFFFFF;
     padding: 20px;
     text-align: center;
+  }
+
+  /* CONTACT FORM */
+  form {
+    border: 3px solid #f1f1f1;
+  }
+  
+  legend{ 
+    font-size: 125%;
+    font-style:italic;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  
+  label{
+    display: inline-block;
+    margin-right:10px;
+    width:15%;
+  }
+  input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+  span{
+    margin-left:20%;
+    font-family: italic;
+    font-weight: bold;
+  }
+  
+  textarea{
+    width: 100%;
+    height: 35vh;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    background-color: #38803C;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  input[type=submit]:hover {
+    opacity: 0.8;
   }
 
   /* FOR TABLETS */
@@ -148,11 +291,12 @@ height: auto;
       }
 
       .writings img{
-          width: 500px;
+          width: 350px;
       }
 
       .min-container p{
-          font-size: 20px;
+          font-size: 15px;
+          padding: 0;
       }
 
       .about img{
@@ -162,9 +306,30 @@ height: auto;
       .home img{
           width: 400px;
       }
+
+      .instagram_feed{
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
   }
 
-  /* FOR DESKTOP */
+  /* FOR LAPTOPS */
   @media only screen and (min-width: 768px){
+    .instagram_feed{
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+  }
 
+  /* FOR LARGE LAPTOPS */
+  @media screen and (min-width: 992px) {
+    .instagram_feed{
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+    }
+
+/* To Stop animation */
+
+@media (prefers-reduced-motion: reduce) {
+    .about img{
+      animation: none;
+    }
   }
