--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,76 @@ height: auto;
     opacity: 0.8;
   }
 
+  /* FLIP CARD */
+  .flip-card, .flip-card-click {
+    display: inline-block;
+      background-color: transparent;
+      width: 300px;
+      height: 300px;
+      margin-right: 12px;
+      margin-bottom: 12px;
+      border: 1px solid #f1f1f1;
+      perspective: 1000px;
+    }
+    .flip-card-inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      transition: transform 0.8s;
+      transform-style: preserve-3d;
+    }
+    .flip-card:hover .flip-card-inner,
+    .flip-card:focus .flip-card-inner,
+    .flip-card:focus-within .flip-card-inner,
+    .flip-card:active .flip-card-inner,
+    .flip-card-click:focus .flip-card-inner,
+    .flip-card-click:active .flip-card-inner,
+    .flip-card-click.flipped .flip-card-inner {
+      transform: rotateY(180deg);
+    }
+    .flip-card-inner:focus {
+      outline: 5px solid #03c23c;
+      cursor: pointer;
+    }
+    .flip-card-inner:hover {
+      outline: 5px solid #FFFFFF;
+      cursor: pointer;
+    }
+    .flip-card-front, .flip-card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      -webkit-backface-visibility: hidden; /* Safari */
+      backface-visibility: hidden;
+    }
+    .flip-card-front h2 {
+        color: white;
+        font-size: 16pt;
+        font-weight: 500;
+        padding: 10px;
+      }
+    .flip-card-front p, .flip-card-back p {
+      padding: 10px;
+      font-size: 16pt;
+      color: white;
+    }
+    .flip-card-front {
+      background-color: #FF7779;
+    }
+    .flip-card-back {
+      background-color: #F8E5B7;
+      transform: rotateY(180deg);
+    }
+
+    .flip-card{
+        display: flex;
+        margin: 0 auto;
+    }
+
   /* FOR TABLETS */
   @media only screen and (min-width: 600px){
     body{
